Update .gitignore to specifically ignore api/.env file

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
-api/.env
 
 # vercel
 .vercel
@@ -40,6 +39,7 @@ next-env.d.ts
 __pycache__/
 venv
 
-# env
+# env files - ensure these are ignored in all directories
 .env
 .env.local
+api/.env
