--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,4 +4,5 @@ httpx==0.25.1
 pydantic==2.4.2
 python-dotenv==1.0.0
 google-generativeai==0.3.1
-python-multipart==0.0.6 
+python-multipart==0.0.6
+canvasapi==3.2.0 
