--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-httpx==0.25.1
-pydantic==2.4.2
-python-dotenv==1.0.0
-google-generativeai==0.3.1
-python-multipart==0.0.6
+fastapi==0.109.2
+uvicorn==0.27.1
+python-dotenv==1.0.1
+httpx==0.26.0
+google-generativeai==0.3.2
 canvasapi==3.3.0 
+aiofiles==23.2.1
+python-multipart==0.0.9
+Pillow==10.2.0
+pytesseract==0.3.10
+PyPDF2==3.0.1
